# bl.elg.gg

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
src/: main.rs
static/: background.js  prism.css  prism.js  style.css
templates/: home.html.tera  post.html.tera
