[package]
name = "bl_elg_gg"
version = "1.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["tls", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.219"
toml = "0.8.23"
chrono = { version = "0.4.41", features = ["serde"] }
pulldown-cmark = "0.13.0"
